# fake-emaail

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  TESTING.md  architecture.md  cargo.toml  db_setup.sh  docker-compose.prod.yml  flake.nix  start.sh  stop.sh
.github/workflows/: nix-backend.yml
crates/db/: Cargo.toml  README.md
crates/db/migrations/: 20260408120000_init_temporary_email.sql  20260408120001_idx_temporary_email_created_at.sql
crates/db/src/: lib.rs  repo.rs
crates/db/src/models/: email.rs  mod.rs  received_email.rs  temp_address.rs  temporary_email.rs
crates/db/src/services/: email.rs  error.rs  generator.rs  mod.rs  temp_address.rs
crates/db/tests/: integration.rs
crates/http-server/: Cargo.toml  README.md
crates/http-server/src/: address.rs  api.rs  core.rs  lib.rs  main.rs
crates/http-server/src/api/: email.rs
crates/http-server/tests/: http_api.rs
crates/smtp/: Cargo.toml
crates/smtp-server/: Cargo.toml
crates/smtp-server/src/: lib.rs
crates/smtp/src/: lib.rs
crates/smtp/tests/: integration.rs
deploy/: fake-email.service  install-service.sh  nginx.api.conf  nginx.conf  nginx.https.conf  setup.sh  ssl-renew.sh  ssl-setup.sh
migrations/: 20251002210800_enable_pgcrypto.sql  20251002210817_create_temporary_emails.sql  20251002210847_create_received_emails.sql
ui/: .gitignore  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vite.config.ts
ui/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
ui/app/.well-known/agent-skills/index.json/: route.ts
ui/app/.well-known/api-catalog/: route.ts
ui/app/agent-md/docs-api/: route.ts
ui/app/agent-md/emails/: route.ts
ui/app/agent-md/home/: route.ts
ui/app/blog/: page.tsx
ui/app/blog/deploying-rust-with-nix-github-actions-scp/: page.tsx
ui/app/blog/how-disposable-email-works/: page.tsx
ui/app/disposable-email-address/: page.tsx
ui/app/docs/api/: page.tsx
ui/app/emails/: page.tsx
ui/public/: llms.txt  manifest.json  openapi.json
ui/public/.well-known/agent-skills/inbox-poll/: SKILL.md
ui/public/.well-known/agent-skills/temp-mailbox/: SKILL.md
ui/scripts/: check-http-server.mjs
ui/src/: App.tsx  globals.css  main.tsx
ui/src/@/components/xui/: beams-background.tsx
ui/src/app/: page.tsx
ui/src/app/api/emails/: route.ts
ui/src/app/api/emails/[id]/: route.ts
ui/src/app/api/emails/all/: route.ts
ui/src/app/api/generate/: route.ts
ui/src/app/emails/: page.tsx
ui/src/components/: Breadcrumb.tsx  HomeContent.tsx  Logo.tsx  Navbar.tsx
ui/src/components/ui/: cover.tsx  email-view.tsx  placeholders-and-vanish-input.tsx  sparkles.tsx
ui/src/components/xui/: beams-background.tsx
ui/src/lib/: backend.ts  errors.ts
ui/src/pages/: EmailsPage.tsx  HomePage.tsx
ui/src/screens/: EmailsPage.tsx  HomePage.tsx
