[workspace]
members = [
  "crates/db",
  "crates/http-server",
  "crates/smtp",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mail-parser = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenvy = "0.15"
rand = "0.8"
thiserror = "1.0"
