[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
db = {path = "../db"}
dotenv = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smtp-server = { path = "../smtp-server" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true }
