[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smtp = { version = "0.1.0", path = "../smtp" }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json.workspace = true
serial_test = "3.4.0"
testcontainers = "0.27.2"
tower = { version = "0.5.3", features = ["util"] }
urlencoding = "2.1"
