[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
mail-parser = { workspace = true }
db = { path = "../db" }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
