[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
mail-parser = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = "3.4.0"
testcontainers = "0.27.2"
